src/snapshots/scooter_hx__snapshot_tests__search_complete_fields_wide.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 160x45
00 |        ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
01 |        │alpha                                                                                                                                         │        |
02 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
03 |        ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
04 |        │                                                                                                                                              │        |
05 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
06 |        ┌───┐                                                                                                                                                   |
07 |        │   │ Fixed strings                                                                                                                                     |
08 |        └───┘                                                                                                                                                   |
09 |        ┌───┐                                                                                                                                                   |
10 |        │   │ Match whole word                                                                                                                                  |
11 |        └───┘                                                                                                                                                   |
12 |        ┌───┐                                                                                                                                                   |
13 |        │ X │ Match case                                                                                                                                        |
14 |        └───┘                                                                                                                                                   |
15 |        ┌─Files to include─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
16 |        │                                                                                                                                              │        |
17 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
18 |        ┌─Files to exclude─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
19 |        │                                                                                                                                              │        |
20 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
21 |                                                                                                                                                                |
22 |        Results: 3 [Search complete]                                                                                                [Time taken: TIME]        |
23 |                                                                                                                                                                |
24 |        [x] fixture.txt:1                                     (1) - alpha one                                                                                   |
25 |        [x] fixture.txt:2                                     (2) +  one                                                                                        |
26 |        [x] fixture.txt:3                                     (3)   alpha two                                                                                   |
27 |                                                                    alpha three                                                                                 |
28 |                                                                                                                                                                |
29 |                                                                                                                                                                |
30 |                                                                                                                                                                |
31 |                                                                                                                                                                |
32 |                                                                                                                                                                |
33 |                                                                                                                                                                |
34 |                                                                                                                                                                |
35 |                                                                                                                                                                |
36 |                                                                                                                                                                |
37 |                                                                                                                                                                |
38 |                                                                                                                                                                |
39 |                                                                                                                                                                |
40 |                                                                                                                                                                |
41 |                                                                                                                                                                |
42 |                                                                                                                                                                |
43 |                                                                                                                                                                |
44 |                                       <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit                                       |
tags:
00: 8-152 focused-field
01: 8-9 focused-field | 9-14 text | 151-152 focused-field
02: 8-152 focused-field
03: 8-152 text
04: 8-9 text | 151-152 text
05: 8-152 text
06: 8-13 text
07: 8-9 text | 12-13 text | 14-27 text
08: 8-13 text
09: 8-13 text
10: 8-9 text | 12-13 text | 14-30 text
11: 8-13 text
12: 8-13 text
13: 8-13 text | 14-24 text
14: 8-13 text
15: 8-152 text
16: 8-9 text | 151-152 text
17: 8-152 text
18: 8-152 text
19: 8-9 text | 151-152 text
20: 8-152 text
22: 8-18 text | 18-36 diff-added | 132-152 diff-added
24: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-68 diff-removed | 68-73 diff-removed-emph | 73-77 diff-removed | 77-152 preview
25: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-72 diff-added | 72-152 preview
26: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-77 text | 77-152 preview
27: 66-79 text | 79-152 preview
28: 66-152 preview
29: 66-152 preview
30: 66-152 preview
31: 66-152 preview
32: 66-152 preview
33: 66-152 preview
34: 66-152 preview
35: 66-152 preview
36: 66-152 preview
37: 66-152 preview
38: 66-152 preview
39: 66-152 preview
40: 66-152 preview
41: 66-152 preview
42: 66-152 preview
43: 66-152 preview
44: 39-121 info
cursor: 14,1
