src/snapshots/scooter_hx__snapshot_tests__search_complete_results_wide.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 160x45
00 |        ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
01 |        │alpha                                                                                                                                         │        |
02 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
03 |        ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐        |
04 |        │                                                                                                                                              │        |
05 |        └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘        |
06 |                                                                                                                                                                |
07 |        Results: 3 [Search complete]                                                                                                [Time taken: TIME]        |
08 |                                                                                                                                                                |
09 |        [x] fixture.txt:1                                     (1) - alpha one                                                                                   |
10 |        [x] fixture.txt:2                                     (2) +  one                                                                                        |
11 |        [x] fixture.txt:3                                     (3)   alpha two                                                                                   |
12 |                                                                    alpha three                                                                                 |
13 |                                                                                                                                                                |
14 |                                                                                                                                                                |
15 |                                                                                                                                                                |
16 |                                                                                                                                                                |
17 |                                                                                                                                                                |
18 |                                                                                                                                                                |
19 |                                                                                                                                                                |
20 |                                                                                                                                                                |
21 |                                                                                                                                                                |
22 |                                                                                                                                                                |
23 |                                                                                                                                                                |
24 |                                                                                                                                                                |
25 |                                                                                                                                                                |
26 |                                                                                                                                                                |
27 |                                                                                                                                                                |
28 |                                                                                                                                                                |
29 |                                                                                                                                                                |
30 |                                                                                                                                                                |
31 |                                                                                                                                                                |
32 |                                                                                                                                                                |
33 |                                                                                                                                                                |
34 |                                                                                                                                                                |
35 |                                                                                                                                                                |
36 |                                                                                                                                                                |
37 |                                                                                                                                                                |
38 |                                                                                                                                                                |
39 |                                                                                                                                                                |
40 |                                                                                                                                                                |
41 |                                                                                                                                                                |
42 |                                                                                                                                                                |
43 |                                                                                                                                                                |
44 |                               <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit                                |
tags:
00: 8-152 text
01: 8-14 text | 151-152 text
02: 8-152 text
03: 8-152 text
04: 8-9 text | 151-152 text
05: 8-152 text
07: 8-18 text | 18-36 diff-added | 132-152 diff-added
09: 8-65 selection | 66-68 diff-removed | 68-73 diff-removed-emph | 73-77 diff-removed | 77-152 preview
10: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-72 diff-added | 72-152 preview
11: 8-12 info | 12-23 text | 23-25 info | 61-65 info | 66-77 text | 77-152 preview
12: 66-79 text | 79-152 preview
13: 66-152 preview
14: 66-152 preview
15: 66-152 preview
16: 66-152 preview
17: 66-152 preview
18: 66-152 preview
19: 66-152 preview
20: 66-152 preview
21: 66-152 preview
22: 66-152 preview
23: 66-152 preview
24: 66-152 preview
25: 66-152 preview
26: 66-152 preview
27: 66-152 preview
28: 66-152 preview
29: 66-152 preview
30: 66-152 preview
31: 66-152 preview
32: 66-152 preview
33: 66-152 preview
34: 66-152 preview
35: 66-152 preview
36: 66-152 preview
37: 66-152 preview
38: 66-152 preview
39: 66-152 preview
40: 66-152 preview
41: 66-152 preview
42: 66-152 preview
43: 66-152 preview
44: 31-128 info
