src/snapshots/scooter_hx__snapshot_tests__search_pending_debounce_banner.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |      ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────┐      |
01 |      │alpha!                                                                                                    │      |
02 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
03 |      ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────┐      |
04 |      │                                                                                                          │      |
05 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
06 |      ┌───┐                                                                                                             |
07 |      │   │ Fixed strings                                                                                               |
08 |      └───┘                                                                                                             |
09 |      ┌───┐                                                                                                             |
10 |      │   │ Match whole word                                                                                            |
11 |      └───┘                                                                                                             |
12 |      ┌───┐                                                                                                             |
13 |      │ X │ Match case                                                                                                  |
14 |      └───┘                                                                                                             |
15 |      ┌─Files to include─────────────────────────────────────────────────────────────────────────────────────────┐      |
16 |      │                                                                                                          │      |
17 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
18 |      ┌─Files to exclude─────────────────────────────────────────────────────────────────────────────────────────┐      |
19 |      │                                                                                                          │      |
20 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
21 |                                                                                                                        |
22 |      Results: 2 [Still searching...]                                                                                   |
23 |                                                                                                                        |
24 |      [x] fixture.txt:1                                                                                        (1)      |
25 |      [x] fixture.txt:2                                                                                        (2)      |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |      - alpha one                                                                                                       |
31 |      +  one                                                                                                            |
32 |        alpha two                                                                                                       |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                   <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit                   |
tags:
00: 6-114 focused-field
01: 6-7 focused-field | 7-13 text | 113-114 focused-field
02: 6-114 focused-field
03: 6-114 text
04: 6-7 text | 113-114 text
05: 6-114 text
06: 6-11 text
07: 6-7 text | 10-11 text | 12-25 text
08: 6-11 text
09: 6-11 text
10: 6-7 text | 10-11 text | 12-28 text
11: 6-11 text
12: 6-11 text
13: 6-11 text | 12-22 text
14: 6-11 text
15: 6-114 text
16: 6-7 text | 113-114 text
17: 6-114 text
18: 6-114 text
19: 6-7 text | 113-114 text
20: 6-114 text
22: 6-16 text | 16-37 info
24: 6-10 info | 10-21 text | 21-23 info | 110-114 info
25: 6-10 info | 10-21 text | 21-23 info | 110-114 info
30: 6-8 diff-removed | 8-13 diff-removed-emph | 13-17 diff-removed | 17-114 preview
31: 6-12 diff-added | 12-114 preview
32: 6-17 text | 17-114 preview
33: 6-114 preview
34: 6-114 preview
35: 6-114 preview
36: 6-114 preview
37: 6-114 preview
38: 6-114 preview
39: 19-101 info
cursor: 13,1
