src/snapshots/scooter_hx__snapshot_tests__small_window_tabbed_field_visible.snap
---
source: src/snapshot_tests.rs
assertion_line: 161
expression: snapshot
---
canvas: 80x12
00 |  ┌───┐                                                                         |
01 |  │ X │ Match case                                                              |
02 |  └───┘                                                                         |
03 |  ┌─Files to include─────────────────────────────────────────────────────────┐  |
04 |  │                                                                          │  |
05 |  └──────────────────────────────────────────────────────────────────────────┘  |
06 |  ┌─Files to exclude─────────────────────────────────────────────────────────┐  |
07 |  │                                                                          │  |
08 |  └──────────────────────────────────────────────────────────────────────────┘  |
09 |                                                                                |
10 |  Results: 0 [Search is empty]                                                  |
11 |<enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> qu|
tags:
00: 2-7 text
01: 2-7 text | 8-18 text
02: 2-7 text
03: 2-78 text
04: 2-3 text | 77-78 text
05: 2-78 text
06: 2-78 focused-field
07: 2-3 focused-field | 77-78 focused-field
08: 2-78 focused-field
10: 2-12 text | 12-30 error
11: 0-80 info
cursor: 3,7
