src/snapshots/scooter_hx__snapshot_tests__toast_multiline_on.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |      ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────┐      |
01 |      │                                                                                                          │      |
02 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
03 |      ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────┐      |
04 |      │                                                                                                          │      |
05 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
06 |      ┌───┐                                                                                                             |
07 |      │   │ Fixed strings                                                                                               |
08 |      └───┘                                                                                                             |
09 |      ┌───┐                                                                                                             |
10 |      │   │ Match whole word                                                                                            |
11 |      └───┘                                                                                                             |
12 |      ┌───┐                                                                                                             |
13 |      │ X │ Match case                                                                                                  |
14 |      └───┘                                                                                                             |
15 |      ┌─Files to include─────────────────────────────────────────────────────────────────────────────────────────┐      |
16 |      │                                                                                                          │      |
17 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
18 |      ┌─Files to exclude─────────────────────────────────────────────────────────────────────────────────────────┐      |
19 |      │                                                                                                          │      |
20 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
21 |                                                                                                                        |
22 |      Results: 0 [Search is empty]                                                                                      |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                   ┌───────────────┐                                                    |
35 |                                                   │ Multiline: ON │                                                    |
36 |                                                   └───────────────┘                                                    |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |                   <enter> jump to results / <tab> focus next / <C-r> reset / <C-h> help / <C-c> quit                   |
tags:
00: 6-114 focused-field
01: 6-7 focused-field | 113-114 focused-field
02: 6-114 focused-field
03: 6-114 text
04: 6-7 text | 113-114 text
05: 6-114 text
06: 6-11 text
07: 6-7 text | 10-11 text | 12-25 text
08: 6-11 text
09: 6-11 text
10: 6-7 text | 10-11 text | 12-28 text
11: 6-11 text
12: 6-11 text
13: 6-11 text | 12-22 text
14: 6-11 text
15: 6-114 text
16: 6-7 text | 113-114 text
17: 6-114 text
18: 6-114 text
19: 6-7 text | 113-114 text
20: 6-114 text
22: 6-16 text | 16-34 error
34: 51-68 toast-border
35: 51-52 toast-border | 52-53 popup | 53-66 text | 66-67 popup | 67-68 toast-border
36: 51-68 toast-border
39: 19-101 info
cursor: 7,1
